# Mesh-Decimator

./: .gitignore  CMakeLists.txt  LICENSE  MeshDecimator.data  MeshDecimator.html.mem  MeshDecimator.js  README.md  index.html
assets/shaders/: lit.frag  lit.vert
modules/: FindGLEW.cmake  FindSDL2.cmake
shells/: debug.html  release.html
source/: main.cpp
source/app/: DirectedEdgeMesh.cpp  DirectedEdgeMesh.h  MeshDecimationApp.cpp  MeshDecimationApp.h  ReducibleDirectedEdgeMesh.cpp  ReducibleDirectedEdgeMesh.h
source/engine/: Application.h  CMakeLists.txt  Engine.cpp  Engine.h
source/engine/camera/: Camera.cpp  Camera.h
source/engine/geometry/: BBox.cpp  BBox.h  OBBox.cpp  OBBox.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Transform.cpp  Transform.h
source/engine/imgui_impl/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
source/engine/input/: Input.cpp  Input.h
source/engine/rendering/: Screen.h  Window.cpp  Window.h
source/engine/rendering/geometry/: Mesh.cpp  Mesh.h
source/engine/rendering/shader/: Shader.cpp  Shader.h
source/engine/rendering/util/: GLUtil.cpp
source/engine/resource/: AssetImporter.cpp  AssetImporter.h  Model.cpp  Model.h
source/engine/util/: EnumClassHash.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  convert.h  file.cpp  file.h  math.cpp  math.h  set_operations.h  util.cpp  util.h
